QOL updates (mainly appearances) plus some updated documentation.